--- a/html/main3.css
+++ b/html/main3.css
@@ -1,4 +1,4 @@
- /* body{
+  body{
     background-color: darkgoldenrod;
     display: flex;
     min-height: 100vh;
@@ -24,9 +24,9 @@
    width: 50vw;
     background-color: wheat;
     
-}  */
+}  
 
-/* #opposite {
+ #opposite {
     display: inline-block;
 }
 p {
@@ -40,7 +40,7 @@ span {
     margin-top: 2rem;
     padding: 2rem 1.5rem 3rem 2rem ;
     height: 100px;
-} */
+} 
 * {
     margin: 0;
     padding: 0;
